Add About Me section and styled them.

--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
   <div class="info_about_me">
      <p>Na imię mi Igor i zapewne szukasz swojego idealnego rozwiązania do stworzenia wizerunku w sieci. 
        Trafiłeś do właściwej osoby, programuję od kilku lat a każda witryna jest tworzona na potrzeby indywidualne. Staram się poznać drugą osobę, dowiedzieć się czego tak właściwie oczekuje ode mnie. 
-       Następnie przystępuje do pracy a TY pod koniec robisz WOW.
+       Następnie przystępuje do pracy a TY pod koniec robisz WOW.    
      </p>
+     <div class="block_element"></div>  
   </div>
   <button>Tak, poproszę nową stronę </button>
+  <img src="img/abstractitem.png" width="50" heigth="50">
 </div>
   
 <div id="portfolio">
