Add offer section and styled them

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="scss/bannerTop.css"/>
   <link rel="stylesheet" href="scss/aboutme.css"/>
   <link rel="stylesheet" href="scss/portfolio.css"/>
+  <link rel="stylesheet" href="scss/offer.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- END SCRIPTS -->
 
@@ -104,11 +105,11 @@
     </div>
 </div>
 
+<div class="offer-top-text">
+  <h2>Dlaczego ja i co mogę <b>Tobie</b> zaoferować?</h2>
+  <div></div>
+</div>
 <div id="offer">
-  <div class="offer-top-text">
-    <h2>Dlaczego ja i co mogę Tobie zaoferować?</h2>
-    <div></div>
-  </div>
   <div class="box-item">
     <img src="img/firstIcon.png">
     <p>Najlepsze rozwiązanie dla Ciebie lub dla Twojej firmy. Przedstaw mi swój pomysł lub po prostu zdaj się na mnie.</p>
@@ -119,14 +120,6 @@
   </div>
   <div class="box-item">
     <img src="img/ThirdIcon.png">
-    <p>Najlepsze rozwiązanie dla Ciebie lub dla Twojej firmy. Przedstaw mi swój pomysł lub po prostu zdaj się na mnie.</p>
-  </div>
-  <div class="box-item">
-    <img src="img/FourIcon.png">
-    <p>Najlepsze rozwiązanie dla Ciebie lub dla Twojej firmy. Przedstaw mi swój pomysł lub po prostu zdaj się na mnie.</p>
-  </div>
-  <div class="box-item">
-    <img src="img/FiveIcon.png">
     <p>Najlepsze rozwiązanie dla Ciebie lub dla Twojej firmy. Przedstaw mi swój pomysł lub po prostu zdaj się na mnie.</p>
   </div>
 </div>
