--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="scss/aboutme.css"/>
   <link rel="stylesheet" href="scss/portfolio.css"/>
   <link rel="stylesheet" href="scss/offer.css"/>
+  <link rel="stylesheet" href="scss/quote.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- END SCRIPTS -->
 
