--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <!-- START SCRIPTS -->
   <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="scss/base.css"/>
   <link rel="stylesheet" href="scss/navMedia.css"/>
   <link rel="stylesheet" href="scss/bannerTop.css"/>
   <link rel="stylesheet" href="scss/aboutme.css"/>
