Add contact section and styled them

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="scss/portfolio.css"/>
   <link rel="stylesheet" href="scss/offer.css"/>
   <link rel="stylesheet" href="scss/quote.css"/>
+  <link rel="stylesheet" href="scss/contact.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- END SCRIPTS -->
 
@@ -131,26 +132,17 @@
 </div>
 
 <div id="contact">
-  <h2>Skontaktuj się ze mną a omówimy projekt</h2>
-  <div class="email_item">
+  <h2>Skontaktuj się ze mną a omówimy <b>projekt.</b></h2>
+  <div class="box-item-contact">
     <img src="img/email.png">
     <p>admin@convertcode.pl</p>
-  </div>
-  <div class="ig_item">
     <img src="img/ig.png">
     <p>@convertcode</p>
-  </div>
-  <div class="fb_item">
     <img src="img/fb.png">
-    <p>facebook.com/ConvertCode</p>
-  </div>
-  <div class="phone_item">
+    <p>ConvertCode</p>
     <img src="img/phone.png">
     <p>+48 511 277 924</p>
-  </div>
-  <div class="image_particles_blue">
-    <img src="img/ss.jpg" width="300" height="300"/>
-  </div>
+</div>
 </div>
 
 <div id="footer">
