Add empty div to h2 text in offer

--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
 </div>
 
 <div class="offer-top-text">
-  <h2>Dlaczego ja i co mogę <b>Tobie</b> zaoferować?</h2>
-  <div></div>
+  <h2>Dlaczego ja i co mogę <b>Tobie</b> zaoferować?<div class="element"></div></h2>
 </div>
 <div id="offer">
   <div class="box-item">
