--- a/index.html
+++ b/index.html
@@ -38,18 +38,20 @@
   <div class="logo">
     <img src="img/logo.png"/>
   </div>
-  <div class="hamburger">
-    <div class="line"></div>
-    <div class="line"></div>
-    <div class="line"></div>
+  <button class="hamburger">
+    <span class="hamburger__box">
+      <span class="hamburger__inner"></span>
+    </span>
+  </button>
+  <div class="navigation">
+    <ul class="navigation__list">
+      <li class="navigation__item"><a href="">Strona Główna</a></li>
+      <li class="navigation__item"><a href="">Kim jestem?</a></li>
+      <li class="navigation__item"><a href="">Portfolio</a></li>
+      <li class="navigation__item"><a href="">Oferta</a></li>
+      <li class="navigation__item"><a href="">Kontakt</a></li>
+    </ul>
   </div>
-  <ul class="nav-links">
-    <li><a href="#">Strona Główna</a></li>
-    <li><a href="#">O mnie</a></li>
-    <li><a href="#portfolio">Portfolio</a></li>
-    <li><a href="#">Dlaczego ja?</a></li>
-    <li><a href="#">Kontakt</a></li>
-  </ul>
 </header>
 
 <div id="banner-top-info">
