Add to button hover in banner

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       Wow jest <br>moim celem.</p>
    </div>
    <div class="button-area wow fadeInUp" data-wow-duration="1s">
-    <a href="#">Sprawdź Ofertę</a>
+    <button><a href="#offer">Sprawdź Ofertę</a></button>
   </div>
    <div class="image_abstract_item">
     <img src="img/abstractitem.png" width="50" heigth="50">
