Modify button to work

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <img src="img/monitor3.png"/>
     </div>
     <div class="getproject wow fadeInUp">
-      <button>Podoba mi się, poproszę i ja </button>
+      <button><a href="#contact">Podoba mi się, poproszę i ja</a></button>
     </div>
 </div>
 
