Fix scroll bug in offer text in all breakpoints

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <li class="navigation__item"><a href="index.html">Strona Główna</a></li>
       <li class="navigation__item"><a href="#about-me">Kim jestem?</a></li>
       <li class="navigation__item"><a href="#portfolio">Portfolio</a></li>
-      <li class="navigation__item"><a href="#offer">Oferta</a></li>
+      <li class="navigation__item"><a href="#offertext">Oferta</a></li>
       <li class="navigation__item"><a href="#contact">Kontakt</a></li>
     </ul>
   </div>
@@ -115,9 +115,10 @@
     </div>
 </div>
 
-<div class="offer-top-text wow fadeInDown">
-  <h2>Dlaczego ja i co mogę <b>Tobie</b> zaoferować?<div class="element"></div></h2>
+<div id="offertext">
+  <h2 class="wow fadeInDown">Dlaczego ja i co mogę <b>Tobie</b> zaoferować?<div class="element"></div></h2>
 </div>
+
 <div id="offer">
   <div class="box-item wow fadeInLeft">
     <img src="img/firstIcon.png">
