Move smooth scroll js to new file. Change top position when scroll

--- a/index.html
+++ b/index.html
@@ -159,25 +159,7 @@
   </div>
 </div>
 
-<script>
-    document.querySelectorAll('a[href^="#"]').forEach(a => {
-    a.addEventListener('click', function (e) {
-        e.preventDefault();
-        var href = this.getAttribute("href");
-        var elem = document.querySelector(href)||document.querySelector("a[name="+href.substring(1, href.length)+"]");
-        window.scroll({
-            top: elem.offsetTop, 
-            left: 0, 
-            behavior: 'smooth',
-        });
-       setTimeout(function(){
-            window.location.hash = this.hash;
-        }, 2000); 
-    });
-});
-</script>
-
-
+<script src="js/smoothScroll.js"></script>
 <script src="vendor/wow/wow.min.js"></script>
               <script>
               new WOW().init();
