--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
      </p>
      <div class="block_element wow fadeInLeft"></div>  
   </div>
-  <button class="wow slideInLeft">Tak, poproszę nową stronę </button>
+  <button class="wow slideInLeft"><a href="#contact">Tak, poproszę nową stronę</a></button>
   <img src="img/abstractitem.png" width="50" heigth="50">
 </div>
   
