Add email icon, add anchor link to contact section

--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
 <div id="contact">
   <h2 class="wow fadeInDown">Skontaktuj się ze mną a omówimy <b>projekt.</b></h2>
   <div class="box-item-contact wow fadeInUp">
-    <img src="img/email.png">
+    <img src="img/email.svg">
     <p>admin@convertcode.pl</p>
     <img src="img/ig.png">
-    <p>@convertcode</p>
+    <p><a href="https://instagram.com/ConvertCode">@convertcode</a></p>
     <img src="img/fb.png">
-    <p>ConvertCode</p>
+    <p><a href="https://facebook.com/ConvertCode">convertcode</a></p>
     <img src="img/phone.png">
-    <p>+48 511 277 924</p>
+    <p><a target="_self" href="tel:511277924">+48 511 277 924</a></p>
 </div>
 </div>
 
