Add footer section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="scss/offer.css"/>
   <link rel="stylesheet" href="scss/quote.css"/>
   <link rel="stylesheet" href="scss/contact.css"/>
+  <link rel="stylesheet" href="scss/footer.css"/>
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
@@ -154,8 +155,7 @@
 
 <div id="footer">
   <div class="footer-item">
-    <p>Igor Swatowski</p>
-    <img src="img/footer.png"/>
+    <p>Copyright &copy; Igor Swatowski. All rights reserved</p>
   </div>
 </div>
 
