Change width button (Portfolio) in mobile breakpoints

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="portfolio-item">
       <img src="img/monitor3.png"/>
     </div>
-    <div class="getproject wow fadeInUp">
+    <div class="getproject wow slideInRight">
       <button><a href="#contact">Podoba mi się, poproszę i ja</a></button>
     </div>
 </div>
