Add new description to offer section

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 <div id="offer">
   <div class="box-item wow fadeInLeft">
     <img src="img/firstIcon.png">
-    <p>Najlepsze rozwiązanie dla Ciebie lub dla Twojej firmy. Przedstaw mi swój pomysł lub po prostu zdaj się na mnie.</p>
+    <p>Do każdej realizacji, otrzymujesz ode mnie instrukcję obsługi strony oraz pełne wsparcie techniczne na wypadek problemów.</p>
   </div>
   <div class="box-item wow fadeInUp">
     <img src="img/SecondIcon.png">
-    <p>Najlepsze rozwiązanie dla Ciebie lub dla Twojej firmy. Przedstaw mi swój pomysł lub po prostu zdaj się na mnie.</p>
+    <p>Wygląd strony internetowej albo przyciąga klientów albo odrzuca. Zadbam o to, aby stworzyć idealny wizerunek Twojej firmy, który ich pozyska.</p>
   </div>
   <div class="box-item wow fadeInRight">
     <img src="img/ThirdIcon.png">
