Add clickable links on images in portfolio

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
       <button class="right-arrow" onclick="plusDivs(+1)"><img src="img/next.svg"></button>
      </div>
      <div class="portfolio-item wow fadeInUp">
-       <img src="img/monitor.png"/>
+      <a href="https://flamboyant-davinci-a2e95c.netlify.app/"><img src="img/monitor.png"/></a>
      </div>
      <div class="portfolio-item">
-      <img src="img/monitor2.png"/>
+      <a href="https://4hest.pl"><img src="img/monitor2.png"/></a>
     </div>
     <div class="getproject wow slideInRight">
       <button><a href="#contact">Podoba mi się, poproszę i ja</a></button>
