Fix hover portfolio bug

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <div id="banner-top-info">
    <div class="image" data-aos="fade-down" data-wos-offset="0" data-aos-delay="400" data-aos-duration="500">
-     <img src="img/particles_top.png"/>
+     <img src="img/Particles_top.png"/>
    </div>
    <div class="author" data-aos="fade-down" data-wos-offset="0" data-aos-delay="400" data-aos-duration="500">
     <h1>Igor Swatowski</h1>
@@ -99,7 +99,7 @@
       <button class="left-arrow" onclick="plusDivs(-1)"><img src="img/back.svg"></button>
       <button class="right-arrow" onclick="plusDivs(+1)"><img src="img/next.svg"></button>
      </div>
-     <div class="portfolio-item" data-aos="fade-down" data-wos-offset="0" data-aos-delay="350" data-aos-duration="500">
+     <div class="portfolio-item">
       <a href="https://flamboyant-davinci-a2e95c.netlify.app/"><img src="img/monitor.png"/></a>
      </div>
      <div class="portfolio-item">
@@ -123,7 +123,7 @@
     <p>Do każdej realizacji, otrzymujesz ode mnie instrukcję obsługi strony oraz pełne wsparcie techniczne na wypadek problemów.</p>
   </div>
   <div class="box-item">
-    <img src="img/SecondIcon.png">
+    <img src="img/secondIcon.png">
     <p>Wygląd strony internetowej albo przyciąga klientów albo odrzuca. Zadbam o to, aby stworzyć idealny wizerunek Twojej firmy, który ich pozyska.</p>
   </div>
   <div class="box-item">
