Delete hover pulse effects from project button

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="portfolio-item">
     	<a href="https://happy-rosalind-ba9eb7.netlify.app/"><img src="img/monitor3.png"/></a>
     </div>
-    <div class="getproject" data-aos="fade-down" data-wos-offset="0" data-aos-delay="350" data-aos-duration="500">
+    <div class="getproject" data-aos="fade-down">
       <button><a href="#contact">Podoba mi się, poproszę i ja</a></button>
     </div>
 </div>
