Add hamburger menu closed when anchor clicked

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 <script>
   AOS.init();
 </script>
+<script src="js/CloseHamburgerMenu.js"></script>
 <script src="js/smoothScroll.js"></script>
 <script src="js/hamburger-menu.js"></script>
 <script src="js/slide-show.js"></script>
